Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.846-devel

***   Add duplicate clock gate optimization, msg980. [Varun Koyyalagunta]
      Disabled unless -OD or -O3 used, please try it as may get some
      significant speedups.

***   Fix wrong dot resolution under inlining. [Art Stamness]

****  Support pattern assignment features, bug616, bug617, bug618. [Ed Lander]

****  Support bind in $unit, bug602. [Ed Lander]

****  Fix DETECTARRAY on packed structures, bug610. [Jeremy Bennett]

****  Fix LITENDIAN on unpacked structures, bug614. [Wai Sum Mong]

****  Fix 32-bit OS VPI scan issue, bug615.  [Jeremy Bennett, Rich Porter]

****  Fix opening a VerilatedVcdC file multiple times, msg1021. [Frederic Requin]


* Verilator 3.845 2013/02/04

***   Fix nested packed arrays and struct, bug600. [Jeremy Bennett]
      Packed arrays are now represented as a single linear vector in
      Verilated models.  This may affect packed arrays that are public or
      accessed via the VPI.

***   Support wires with data types, bug608. [Ed Lander]

***   Support bind, to module names only, bug602. [Ed Lander]

***   Support VPI product info, warning calls, etc, bug588. [Rick Porter]

***   Support $left, $right and related functions, bug448. [Iztok Jeras]

***   Support inside expressions.

***   Define SYSTEMVERILOG, SV_COV_START and other IEEE mandated predefines.

****  Fix pin width mismatch error, bug595.  [Alex Solomatnikov]

****  Fix implicit one bit parameter selection, bug603.  [Jeremy Bennett]

****  Fix signed/unsigned parameter misconversion, bug606.  [Jeremy Bennett]

****  Fix segfault on multidimensional dotted arrays, bug607.  [Jie Xu]

****  Fix per-bit array output connection error, bug414.  [Jan Egil Ruud]

****  Fix package logic var compile error.

****  Fix enums with X values.


* Verilator 3.844 2013/01/09
